--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "author": "Wilian Silva",
     "license": "ISC",
     "repository": {
-        "url": ""
+        "url": "https://github.com/WilianZilv/safe-property"
     }
 }
